refactor: 테스트 경고 해결